--- a/web/package.json
+++ b/web/package.json
@@ -43,6 +43,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "jsdom": "^28.1.0",
+    "msw": "^2.12.10",
     "prettier": "^3.8.1",
     "shadcn": "^3.8.4",
     "tw-animate-css": "^1.4.0",
